20041025 accessor.pl,internals.h,libspectrum.c,libspectrum.h.in,
         snap_accessors.txt,snapshot.c,szx.c,z80.c,doc/libspectrum.txt: Add
         support for connected joystick information in snapshots.
20041031 .cvsignore: ignore stamp-h1.
20041125 Makefile.am,libspectrum.h.in,microdrive.c: very simple .mdr
         handling.
20041221 rzx.c: fix compilation when gcrypt not present (thanks, Erik Kunze)
	 (closes bug #1053346).
20041230 libspectrum.c,libspectrum.h.in: add identification of .mdr files
	 (part of patch #1085429) (Gergely Szasz).
20050102 libspectrum.h.in,microdrive.c: variable length microdrive cartridge
	 handling (rest of patch #1085429) (Gergely Szasz).
20050102 libspectrum.{c,h.in},sna.c,szx.c,timings.c,z80.c: TS2068 support
	 (patch #1080531) (Fred).
20050108 libspectrum.c: Declare libspectrum_default_error_function before
         referring to it (Fred).
20050108 timings.c: fix Pentagon and Scorpion CPU speeds to give them 50Hz
	 frame rates (rest of patch #1080531) (Fred).
20050113 libspectrum.c: Set NTSC capability for the TS2068 (Fred).
20050115 szx.c,zxs.c: fix compilation when zlib not present (closes bug
	 #1098337).
20050125 libspectrum.h.in: Warn about use of deprecated interfaces with GCC
	 (Fred).
20050204 szx.c,rzx.c: More compilation fixes when zlib not present (Fred).
20050204 libspectrum.h.in: More Win32 compilation fixes (Fred).
20050204 configure.in,Makefile.am: More Win32 compilation fixes (Fred).
20050204 configure.in,Makefile.am: Mark libspectrum.h as a nodist file instead
	 of deleting it when configure is run, remember to make distribution
	 tarballs with 'make dist-gzip' (Fred).
20050213 szx.c: make uncompressed snaps with DOCK data work (and don't waste
	 memory when loading compressed snaps with DOCK data).
20050213 szx.c: don't bom if we try and write out a page which doesn't
	 exist in the snapshot.
20050218 ide.c: add libspectrum_ide_dirty function.