@@ -311,3 +311,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20050213 szx.c: don't bom if we try and write out a page which doesn't
 	 exist in the snapshot.
 20050218 ide.c: add libspectrum_ide_dirty function.
+20050227 make-perl.c,libspectrum.h.in: advertise that we support zlib
+         compressed files (Fred).
